#194 - Spanish translations for all needed

--- a/savis4/src/assets/i18n/en.json
+++ b/savis4/src/assets/i18n/en.json
@@ -327,6 +327,9 @@
     "//problems_component": "These are the translations for the Problems component",
     "problems_title": "Practice Problems",
     "problems_back": "Back to Practice Problems Selection",
+    "problems_submit": "Submit Answer",
+    "problems_hide":"Hide Answer",
+    "problems_generator":"Generate New Problem",
     "problems_bar_chart_title": "Bar Chart Problems",
     "problems_correlation_title": "Correlation Problems",
     "problems_correlation_instructions_title": "Analyze the Correlation",
@@ -351,6 +354,23 @@
     "problems_correlation_try_again": "Try Another Dataset",
     "problems_correlation_chart_helper": "Examine the pattern of points in the scatter plot above.",
     "problems_dot_plot_title": "Dot Plot Problems",
+    "problems_tmht_nullHyp":"Null Hypothesis:",
+    "problems_tmht_pVal":"p-value: (to 4 decimal places)",
+    "problems_tmht_testType":"Test type:",
+    "problems_tmht_z":" z-test",
+    "problems_tmht_t":" t-test",
+    "problems_tmht_concl":"Conclusion:",
+    "problems_tmht_rejh0":" Reject null hypothesis",
+    "problems_tmht_failtorejh0":" Fail to reject null hypothesis",
+    "problems_tmht_corrAns":"Correct Answer:",
+    "problems_tmht_questions":[
+      "A coffee shop claims that their coffee is served at an average temperature of <b>175°F</b>. A health inspector suspects it’s lower. She samples <b>n = 25 cups</b> and finds: <br><br> <b>Sample mean = </b>172°F<br><b>Sample standard deviation = </b>6°F <br><br>At the <b>0.05 significance level</b>, test whether the coffee is served cooler than claimed.",
+      "A company advertises that their phone’s battery lasts an average of <b>10 hours</b> on a full charge. A consumer agency tests <b>40 phones</b> and finds: <br><br><b>Sample mean =</b> 9.6 hours<br><b>Population standard deviation = </b>1.2 hours<br><br>At <b>α = 0.01,</b> is there evidence that the mean battery life is less than advertised?",
+      "A city planner believes that the average commute time for residents is <b>more than 30 minutes</b>. A random sample of <b>36 residents</b> has:<br><br><b>Sample mean =</b> 32 minutes<br><b>Sample standard deviation =</b> 5 minutes <br><br>Test the claim at the <b>0.05 significance level</b>.",
+      "A university claims its students have an <b>average GPA of 3.2</b>. A sample of <b>16 students</b> shows a <b>mean GPA of 3.05</b> with a <b>sample standard deviation of 0.4</b>. At <b>α = 0.10</b>, test whether the average GPA is different from the university’s claim.",
+      "A delivery company states that their small boxes weigh on average <b>2.5 lbs</b>. A customer suspects the boxes are lighter than advertised. They weigh <b>50 boxes</b> and find: <br><br><b>Mean weight =</b> 2.45 lbs<br><b>Population standard deviation =</b> 0.2 lbs<br><br>At the <b>0.05 significance level</b>, test if the boxes are lighter than claimed."
+    ],
+    
     "problems_omci_title": "One Mean Confidence Interval Problems",
     "problems_omht_title": "One Mean Hypothesis Testing Problems",
     "problems_opci_title": "One Proportion Confidence Interval Problems",
@@ -360,6 +380,19 @@
     "problems_tmht_title": "Two Mean Hypothesis Testing Problems",
     "problems_tpci_title": "Two Proportion Confidence Interval Problems",
     "problems_tpht_title": "Two Proportion Hypothesis Testing Problems",
+    "problems_omci_ci_q":"Using the sample stats below, what is the 95% confidence interval for μ? (Round bounds to two decimal places).",
+    "problems_omci_sampsize_q":"Determine the minimum sample size required to estimate the population mean with a margin of error of {{E.toFixed(2)}} at <strong>95% confidence level</strong>. The population standard deviation (σ) is {{sigma.toFixed(2)}}. (Round up to the nearest whole number).",
+    "problems_omci_xbar_q":"A <strong>95% confidence interval</strong> was constructed from a sample. The resulting interval is shown below. What is the <strong>point estimate (sample mean, x̄)?</strong> (Round to two decimal places).",
+    "problems_omci_efromci_q":"A <strong>95% confidence interval</strong> was constructed from a sample. The resulting interval is shown below. What is the <strong>margin of error (E)? (Round to two decimal places).</strong>",
+    "problems_omci_sampdist_q":"A large population has a true mean (μ) of <strong>{{populationMean.toFixed(2)}}</strong>. If we take 1000 different random samples, each with a size of <strong>n = {{sampleSize}}</strong>, and calculate the sample mean (x̄) for all 1000 samples, what value would we expect the <strong>mean of all these sample means</strong> to be close to? (Round to two decimal places).",
+    "problems_omci_sampMean":"Sample Mean (x̄) = ",
+    "problems_omci_sampStdDev":"Sample StdDev (s) = ",
+    "problems_omci_sampSize":"Sample Size (N) = ",
+    "problems_omci_critVal":"Critical value (z) = ",
+    "problems_omci_confLvl":"Confidence level = ",
+    "problems_omci_confInterval":"Confidence Interval = ",
+    "problems_omci_popMean":"Population Mean (μ) = ",
+
     "//user_manual": "These are the translations for the User Manual component",
     "uman_title":"SAVIS User Manual Selection",
     "uman_back":"Back to User Manual Selection",
@@ -542,5 +575,8 @@
     "lr_upper_bound": "Upper Bound",
     "lr_lower_bound": "Lower Bound",
     "lr_error_bars": "Error Bars",
-    "calc_switch": "Calculator"
+    "calc_switch": "Calculator",
+    "button_toGuide": "Guide for ",
+    "button_toPP":"Practice Problems for ",
+    "button_toGraph":"Graph for "
 }
