--- a/savis4/src/assets/i18n/es.json
+++ b/savis4/src/assets/i18n/es.json
@@ -503,5 +503,77 @@
     "lr_upper_bound": "Límite Superior",
     "lr_lower_bound": "Límite Inferior",
     "lr_error_bars": "Barras de Error",
-    "calc_switch": "Calculadora"
+    "calc_switch": "Calculadora",
+    "//problems_component": "These are the translations for the Problems component",
+    "problems_title": "Problemas para Practicar",
+    "problems_back": "Volver a la Selección de Problemas",
+    "problems_submit": "Enviar Respuesta",
+    "problems_hide":"Ocultar Respuesta",
+    "problems_generator":"Generar Nuevo Problema",
+    "problems_bar_chart_title": "Práctica de Gráfico de Barras",
+    "problems_correlation_title": "Práctica de Correlación",
+    "problems_correlation_instructions_title": "Analizar la Correlación",
+    "problems_correlation_instructions": "Observa el diagrama de dispersión y determina:<ul><li>La <strong>dirección</strong> de la relación (positiva, negativa o nula)</li><li>La <strong>fuerza</strong> de la correlación (muy fuerte = |r| ≥ 0.9, fuerte = |r| ≥ 0.7, moderada = |r| ≥ 0.5, débil = |r| ≥ 0.3, muy débil = |r| < 0.3)</li></ul>",
+    "problems_correlation_generate": "Generar Nuevo Conjunto de Datos",
+    "problems_correlation_select": "Elegir",
+    "problems_correlation_type_label": "Tipo de Correlación:",
+    "problems_correlation_type_positive": "Positiva",
+    "problems_correlation_type_negative": "Negativa",
+    "problems_correlation_type_none": "Nula / Muy Débil",
+    "problems_correlation_strength_label": "Fuerza de Correlación:",
+    "problems_correlation_strength_very_strong": "Muy Fuerte (|r| ≥ 0.9)",
+    "problems_correlation_strength_strong": "Fuerte (|r| ≥ 0.7)",
+    "problems_correlation_strength_moderate": "Moderada (|r| ≥ 0.5)",
+    "problems_correlation_strength_weak": "Débil (|r| ≥ 0.3)",
+    "problems_correlation_strength_very_weak": "Muy Débil (|r| < 0.3)",
+    "problems_correlation_submit": "Verificar Respuesta",
+    "problems_correlation_coefficient_label": "Correlation Coefficient:",
+    "problems_correlation_correct": "Correcta!",
+    "problems_correlation_incorrect": "Incorrecta. Inténtalo de nuevo!",
+    "problems_correlation_correct_answer": "Respuesta Correcta",
+    "problems_correlation_try_again": "Pruebe con Otros Datos",
+    "problems_correlation_chart_helper": "Examine el patrón de puntos en el diagrama de dispersión anterior.",
+    "problems_dot_plot_title": "Práctica del Diagrama de Puntos",
+    "problems_tmht_nullHyp":"Hipótesis nula:",
+    "problems_tmht_pVal":"Valor p: (hasta 4 decimales)",
+    "problems_tmht_testType":"Tipo de prueba:",
+    "problems_tmht_z":" prueba-z",
+    "problems_tmht_t":" prueba-t",
+    "problems_tmht_concl":"Conclusión:",
+    "problems_tmht_rejh0":" Rechazar la hipótesis nula",
+    "problems_tmht_failtorejh0":" No se rechaza la hipótesis nula",
+    "problems_tmht_corrAns":"Respuesta Correcta:",
+    "problems_tmht_questions":[
+      "Una cafetería afirma que su café se sirve a una temperatura promedio de <b>175°F</b>. Una inspectora sanitaria sospecha que es más baja. Toma una muestra de <b>n = 25 tazas</b> y encuentra: <br><br> <b>Media muestral =</b> 172 °F <br><b> Desviación estándar muestral =</b> 6 °F <br><br> Con un <b>nivel de significancia de 0.05</b>, realice una prueba para determinar si el café se sirve a una temperatura menor a la declarada.",
+      "Una empresa anuncia que la batería de su teléfono dura un promedio de <b>10 horas</b> con una carga completa. Una agencia de consumidores prueba <b>40 teléfonos</b> y encuentra: <br><br><b>Media muestral =</b> 9.6 horas<br><b>Desviación estándar poblacional =</b> 1.2 horas<br><br>Con un nivel de significancia de <b>α = 0.01</b>, ¿existe evidencia de que la duración promedio de la batería sea menor a la anunciada?",
+      "Un planificador urbano cree que el tiempo promedio de viaje al trabajo de los residentes es <b>más de 30 minutos</b>. Una muestra aleatoria de <b>36 residentes</b> tiene:<br><br><b>Media muestral =</b> 32 minutos<br><b>Desviación estándar muestral =</b> 5 minutos <br><br>Pruebe la afirmación con un nivel de significancia de <b>0.05</b>.",
+      "Una universidad afirma que sus estudiantes tienen un <b>promedio de calificaciones (GPA) de 3.2</b>. Una muestra de <b>16 estudiantes</b> muestra un <b>GPA promedio de 3.05</b> con una <b>desviación estándar muestral de 0.4.</b> Con un <b>nivel de significancia de α = 0.10</b>, determine si el GPA promedio difiere del que afirma la universidad.",
+      "Una empresa de reparto afirma que sus cajas pequeñas pesan en promedio <b>2.5 libras</b>. Un cliente sospecha que las cajas son más ligeras de lo anunciado. Pesa <b>50 cajas</b> y encuentra: <br><br><b>Peso medio =</b> 2.45 libras<br><b>Desviación estándar de la población =</b> 0.2 libras<br><br> Con un <b>nivel de significancia de 0.05</b>, realice una prueba para determinar si las cajas son más ligeras de lo que se afirma."
+    ],
+
+    "problems_omci_title": "Práctica del Intervalo de Confianza de Una Media",
+    "problems_omht_title": "Práctica de Prueba de Hipótesis de Una Media",
+    "problems_opci_title": "Práctica del Intervalo de Confianza de Una Proporción",
+    "problems_opht_title": "Práctica de Prueba de Hipótesis de Una Proporción",
+    "problems_regression_title": "Práctica de Regresión",
+    "problems_tmci_title": "Práctica del Intervalo de Confianza de Dos Medias",
+    "problems_tmht_title": "Práctica de Prueba de Hipótesis de Dos Medias",
+    "problems_tpci_title": "Práctica del Intervalo de Confianza de Dos Proporciónes",
+    "problems_tpht_title": "Práctica de Prueba de Hipótesis de Dos Proporciónes",
+    "problems_omci_ci_q":"Utilizando las estadísticas de muestra a continuación, ¿cuál es el intervalo de confianza del 95% para μ? (Redondee los límites a dos decimales).",
+    "problems_omci_sampsize_q":"Determine el tamaño mínimo de muestra necesario para estimar la media poblacional con un margen de error de {{E.toFixed(2)}} a un nivel de confianza del <strong>95%</strong>. La desviación estándar poblacional (σ) es {{sigma.toFixed(2)}}. (Redondee al número entero más próximo).",
+    "problems_omci_xbar_q":"Se construyó un intervalo de confianza del 95% a partir de una muestra. El intervalo resultante se muestra a continuación. ¿Cuál es la estimación puntual (media muestral, x̄)? (Redondee a dos decimales).",
+    "problems_omci_efromci_q":"Se construyó un intervalo de confianza del 95% a partir de una muestra. El intervalo resultante se muestra a continuación. ¿Cuál es el margen de error (E)? (Redondee a dos decimales).",
+    "problems_omci_sampdist_q":"Una población grande tiene una media verdadera (μ) de <strong>{{populationMean.toFixed(2)}}</strong>. Si tomamos 1000 muestras aleatorias diferentes, cada una con un tamaño de <strong>n = {{sampleSize}}</strong>, y calculamos la media muestral (x̄) para las 1000 muestras, ¿a qué valor esperaríamos que se aproximara la <strong>media de todas estas medias muestrales</strong>? (Redondee a dos decimales).",
+    "problems_omci_sampMean":"Media muestral (x̄) = ",
+    "problems_omci_sampStdDev":"Desviación estándar de muestra (s) = ",
+    "problems_omci_sampSize":"Tamaño de la muestra (N) = ",
+    "problems_omci_critVal":"Valor crítico (z) = ",
+    "problems_omci_confLvl":"Nivel de confianza = ",
+    "problems_omci_confInterval":"Intervalo de confianza = ",
+    "problems_omci_popMean":"Media poblacional (μ) = ",
+
+    "button_toGuide": "Guía para ",
+    "button_toPP":"Ejercicios de ",
+    "button_toGraph":"Gráfico para "
 }
