Updated Linear Regression UI Icons for how you can move the line graph is better visually radius for points look better some buttons side by side to make better use of blank space

--- a/savis4/src/assets/i18n/en.json
+++ b/savis4/src/assets/i18n/en.json
@@ -576,6 +576,9 @@
     "lr_upper_bound": "Upper Bound",
     "lr_lower_bound": "Lower Bound",
     "lr_error_bars": "Error Bars",
+    "lr_drag_move": "Drag to Move",
+    "lr_shift_rotate": "Shift + Drag to Rotate",
+    "lr_arrow_keys": "Arrow Keys",
     "calc_switch": "Calculator",
     "button_toGuide": "Guide for ",
     "button_toPP":"Practice Problems for ",
